# mergeme

./: CHANGELOG.md  Cargo.toml  README.md
mergeme/: Cargo.toml
mergeme/src/: lib.rs
mergeme_derive/: Cargo.toml
mergeme_derive/src/: lib.rs  utils.rs
src/: lib.rs
tests/: ui.rs
tests/ui/fail/incorrect_item/: enum.rs  enum.stderr  tuple_struct.rs  tuple_struct.stderr  union.rs  union.stderr
tests/ui/fail/partial/: incorrect_partial.rs  incorrect_partial.stderr  missing_partial.rs  missing_partial.stderr  too_many_partial.rs  too_many_partial.stderr
tests/ui/fail/strategy/: unknown_strategy.rs  unknown_strategy.stderr
tests/ui/pass/: generic_merge.rs  generic_overwrite.rs  serde.rs  simple.rs  unit_struct.rs
