[workspace]
resolver = "3"
members = ["mergeme_derive"]

[package]
name = "mergeme"
version = "0.1.1"
authors = ["BD103"]
edition = "2024"
description = "A derivable trait that assists with merging data together"
repository = "https://github.com/BD103/mergeme"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "derive", "config"]
categories = ["config", "no-std", "no-std::no-alloc"]

[features]
default = ["derive"]

# Enables the `Merge` derive macro.
derive = ["dep:mergeme_derive"]

[dependencies]
mergeme_derive = { path = "./mergeme_derive", version = "0.1.0", optional = true }

[dev-dependencies]
trybuild = "1.0.104"
