[package]
name = "mergeme_derive"
version = "0.2.0"
authors = ["BD103"]
edition = "2024"
description = "A derivable trait that assists with merging data together"
documentation = "https://docs.rs/mergeme"
readme = "../README.md"
repository = "https://github.com/BD103/mergeme"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "derive", "config"]
categories = ["config", "no-std", "no-std::no-alloc"]

[lib]
proc-macro = true

[dependencies]
# Parses token streams into syntax trees.
syn = "2.0.101"

# Generates token streams from code.
quote = "1.0.40"

# Used for interoperability between `proc_macro`, `syn`, and `quote.
proc-macro2 = "1.0.95"

[dev-dependencies]
# Used in doc tests.
mergeme = { path = "../" }
